<resources>
    <string name="next">Επόμενο</string>
    <string name="previous">Προηγούμενο</string>
    <string name="app_name" translatable="false">iDry</string>
    <string name="my_routines_label">Τα προγράμματα μου</string>
    <string name="routines_prompt">Επιλέξτε ένα από τα παρακάτω προγράμματα ή δημιουργήστε ένα καινούργιο</string>
    <string name="new_routine_label">Δημιουργία νέου προγράμματος</string>
    <string name="new_routine_btn">Νέο πρόγραμμα</string>
    <string name="placeholder" translatable="false">placeholder</string>
    <string name="bar_drying_level">Στάθμη</string>
    <string name="bar_programme">Πρόγραμμα</string>
    <string name="bar_time">Αναμονή</string>
    <string name="bar_preview">Σύνοψη</string>
    <string name="bar_divider" translatable="false">›</string>
    <string name="drying_level_label">Επιλέξτε επίπεδο ξηρότητας</string>
    <string name="drying_level_extra_dry_btn">Πολύ ξηρά</string>
    <string name="drying_level_normal_btn">Κανονικό</string>
    <string name="drying_level_hand_iron_btn">Σίδερο χεριού</string>
    <string name="drying_level_machine_iron_btn">Σίδερο μηχανής</string>
    <string name="up_arrow" translatable="false">︿</string>
    <string name="down_arrow" translatable="false">﹀</string>
    <string name="previous_btn">Προηγούμενο</string>
    <string name="next_btn">Επόμενο</string>
    <string name="programme_label">Επιλέξτε ένα πρόγραμμα ρούχων</string>
    <string name="programme_cottons_btn">Βαμβακερά</string>
    <string name="programme_minimum_iron_btn">Ελάχιστο σιδέρωμα</string>
    <string name="programme_woollens_btn">Μάλλινα</string>
    <string name="programme_outerwear_btn">Εξωτερικά ενδύματα</string>
    <string name="programme_proofing_btn">Μόνωση</string>
    <string name="programme_express_btn">Σύντομο</string>
    <string name="programme_automatic_plus_btn">Αυτόματο</string>
    <string name="programme_shirts_btn">Μπλούζες</string>
    <string name="programme_denim_btn">Τζιν</string>
    <string name="programme_hygiene_btn">Υγιεινό</string>
    <string name="programme_warm_air_btn">Ζεστός αέρας</string>
    <string name="programme_gentle_smoothing_btn">Απαλή λείανση</string>
    <string name="time_label">Επιλέξτε ώρα εκκίνησης</string>
    <string name="time_now_btn">Εκκίνηση τώρα</string>
    <string name="time_select_date_label">Επιλογή ημερομηνίας</string>
    <string name="time_select_time_label">Επιλογή ώρας</string>
    <string name="time_divider" translatable="false">:</string>
    <string name="double_zero" translatable="false">00</string>
    <string name="left_arrow" translatable="false">〈</string>
    <string name="right_arrow" translatable="false">〉</string>
    <string name="time_error_notification">Παρακαλώ επιλέξτε μια μελλοντική ημερομηνία.</string>
    <string name="main_start_btn_on">Ενεργοποίηση συσκευής</string>
    <string name="main_notifications_label">Ειδοποιήσεις</string>
    <string name="notification_filters">Καθαρίστε τα φίλτρα του στεγνωτηρίου</string>
    <string name="notification_container">Αδειάστε το δοχείο νερού</string>
    <string name="main_help_btn">Βοήθεια</string>
    <string name="filter_guide_first_step_title">Ανοίξτε το πορτάκι που υποδεικνέται στην εικόνα</string>
    <string name="filter_guide_second_step_title">Τραβήξτε προς τα έξω το φίλτρο από το χερούλι</string>
    <string name="filter_guide_third_step_title">Αφαιρέστε το χερούλι από το φίλτρο</string>
    <string name="filter_guide_fourth_step_title">Καθαρίστε το φίλτρο</string>
    <string name="filter_guide_fourth_step_headtitle">Διαδικασία καθαρισμού</string>
    <string name="filter_guide_fourth_step_txt1">Τοποθετήστε το φίλτρο κάτω από τρεχούμενο νερό.</string>
    <string name="filter_guide_fourth_step_txt2">Στίψτε καλά το φίλτρο.</string>
    <string name="filter_guide_fourth_step_txt3">Αφαιρέστε οποιοδήποτε ίχνος χνουδιού βρίσκεται πάνω στο χερούλι.</string>
    <string name="filter_guide_fourth_step_warning_txt">Βεβαιωθείτε ότι το φίλτρο έχει στεγνώσει καλά πριν το τοποθετήσετε ξανά πίσω.</string>
    <string name="filter_guide_fifth_step_title">Καθαρίστε τον εναλλακτή θερμότητας με μία σκούπα</string>
    <string name="filter_guide_fifth_step_headtitle">Διαδικασία καθαρισμού</string>
    <string name="filter_guide_fifth_step_side_warning_txt1">Αποφύγετε να ακουμπήσετε τις μεταλλικές ράβδους καθώς είναι ιδιαίτερα αιχμηρές.</string>
    <string name="filter_guide_fifth_step_warning_txt2">Περάστε προσεκτικά την σκούπα πάνω από τις μεταλλικές ράβδους. Υπερβολική πιεση ή βιασύνη μπορεί να προκαλέσει βλάβη.</string>
    <string name="filter_guide_sixth_step_title">Βάλτε το χερούλι πίσω στο φίλτρο</string>
    <string name="filter_guide_seventh_step_title">Βάλτε το χερούλι με το φίλτρο στους δύο οδηγούς</string>
    <string name="filter_guide_seventh_step_warning_txt">Βεβαιωθείτε ότι η κίτρινη τελεία βρίσκεται από την δεξιά πλευρά του χερουλιού.</string>
    <string name="container_guide_first_step_title">Αφαιρέστε το δοχείο</string>
    <string name="container_first_guide_step_warning_txt">Κρατήστε το δοχείο με κλίση προς τα πίσω καθώς το μετακινείτε προκειμένου να μην χηθεί το νερό που περιέχει.</string>
    <string name="container_guide_second_step_title">Αδειάστε το νερό του δοχείο</string>
    <string name="container_guide_third_step_title">Βάλτε το δοχείο πίσω στην θέση του</string>
    <string name="container_guide_third_step_warning_txt">Το νερό που αδείασατε δεν προορίζεται για κατανάλωση. Πιθανή κατάποση του να οδηγήσει σε προβλήματα υγείας.</string>
    <string name="filter_guide_fifth_step_txt">Για τον καθαρισμό χρησιμοποιείστε σκουπάκι ξεσκονίσματος ή ακροφύσιο ρωγμών.</string>
    <string name="program_overview_duration_title">Διάρκεια προγράμματος</string>
    <string name="confirm_btn">Επιβεβαίωση</string>
    <string name="stop_program_btn">Διακοπή προγράμματος</string>
    <string name="resume_btn">Συνέχιση</string>
    <string name="program_overview_details_txt">Λεπτομέρειες προγράμματος</string>
    <string name="program_overview_dryer_level_title">Επίπεδο ξυρότητας</string>
    <string name="program_overview_clothes_programme_title">Πρόγραμμα ρούχων</string>
    <string name="program_overview_delay_time_title">Χρόνος αναμονής για εκκίνηση</string>
    <string name="day_label">μέρα</string>
    <string name="days_label">μέρες</string>
    <string name="hour_label">ώρα</string>
    <string name="hours_label">ώρες</string>
    <string name="minute_label">λεπτό</string>
    <string name="minutes_label">λεπτά</string>
    <string name="second_label">δευτερόλεπτο</string>
    <string name="seconds_label">δευτερόλεπτα</string>
    <string name="and_label">και</string>
    <string name="program_overview_status_title">Κατάσταση</string>
    <string name="program_overview_status_details_confirm_txt">Πατήστε το κουμπί \"Επιβεβαίωση\" για να θέσετε σε λειτουργία το πρόγραμμα.</string>
    <string name="program_overview_status_details_resume_txt">Πατήστε το κουμπί \"Συνέχιση\" για να συνεχίσει το πρόγραμμα.</string>
    <string name="program_overview_status_working">Σε λειτουργία</string>
    <string name="program_overview_status_suspended">Σε αναμονή</string>
    <string name="program_overview_dialog_message_save_routine">Επιθυμείς την αποθήκευση του συγκεκριμένου προγράμματος;</string>
    <string name="yes_label">Ναι</string>
    <string name="no_label">Όχι</string>
    <string name="program_overview_dialog_message_rename_routine">Πληκτρολογήστε το όνομα που επιθυμείτε</string>
    <string name="cancel_label">Ακύρωση</string>
    <string name="confirm_label">Επιβεβαίωση</string>
    <string name="program_overview_notification_message_not_saved">Το πρόγραμμα δεν αποθηκεύτηκε</string>
    <string name="program_overview_notification_message_saved">Το πρόγραμμα αποθηκεύτηκε επιτυχώς</string>
    <string name="program_overview_status_complete">Το πρόγραμμα ολοκληρώθηκε επιτυχώς</string>
    <string name="program_overview_status_details_remove_clothes">Αφαιρέστε τα ρούχα από τον κάδο</string>
    <string name="return_to_home_page_btn">Επιστροφή στην αρχική σελίδα</string>
    <string name="program_overview_notification_message_name_match">Το όνομα που εισάγατε υπάρχει ήδη. Παρακαλώ πληκτρολογήστε κάποιο άλλο.</string>
    <string name="program_overview_notification_message_empty_text">Το πεδίο είναι κενό. Παρακαλώ εισάγετε ένα όνομα.</string>
    <string name="open_door_btn">Άνοιγμα πόρτας</string>
    <string name="settings_btn_description">Κουμπί ρυθμίσεων</string>
    <string name="door_unlocked_message">Η πόρτα ξεκλείδωσε</string>
    <string name="door_guide_title">Τοποθετήστε τα ρούχα στον κάδο</string>
    <string name="door_guide_close_door_title">Κλείστε την πόρτα όταν είστε έτοιμοι να προχωρήσετε</string>
    <string name="return_btn">Επιστροφή</string>
    <string name="gr" translatable="false">Ελληνικά</string>
    <string name="en" translatable="false">English</string>
    <string name="settingskey">Ρυθμίσεις</string>
    <string name="soundkey">Ήχος</string>
    <string name="lang">Γλώσσα</string>
    <string name="notif">Ειδοποιήσεις</string>
    <string name="VI">Φωνητικές Οδηγίες</string>
    <string name="VC">Φωνητικές Εντολές</string>
    <string name="tts_turn_on">Η συσκευή ενεργοποιήθηκε</string>
    <string name="tts_door_unlocked">Η πόρτα άνοιξε</string>
    <string name="tts_first_step_prompt">Επιλέξτε στάθμη ξυρότητας</string>
    <string name="tts_extra_dry_selected">Πολύ ξηρά</string>
    <string name="tts_normal_selected">Κανονικό</string>
    <string name="tts_hand_iron_selected">Σίδερο χεριού</string>
    <string name="tts_machine_iron_selected">Σίδερο μηχανής</string>
    <string name="tts_second_step_prompt">Επιλέξτε πρόγραμμα</string>
    <string name="tts_third_step_prompt">Επιλέξτε ώρα εκκίνησης</string>
    <string name="tts_third_step_invalid_date">Παρακαλώ επιλέξτε μελλοντική ημερομηνία</string>
    <string name="tts_preview_level_programme">με στάθμη %s και πρόγραμμα %s</string>
    <string name="tts_preview_save_dialog">Θα επιθυμούσατε να αποθηκεύσετε το πρόγραμμα σας;</string>
    <string name="tts_preview_empty_name">Παρακαλώ εισάγετε κάποιο όνομα</string>
    <string name="tts_preview_different_name">Παρακαλώ εισάγετε ένα διαφορετικό όνομα</string>
    <string name="tts_first_container">Αφαιρέστε το δοχείο και αδειάστε το νερό</string>
    <string name="tts_second_container">Τοποθετήστε το δοχείο πίσω στην θέση του</string>
    <string name="tts_first_filter">Ανοίξτε το πορτάκι του φίλτρου και τραβήξτε το χερούλι προς το μέρος σας</string>
    <string name="tts_second_filter">Αφαιρέστε το χερούλι και πλύντε το φίλτρο</string>
    <string name="tts_third_filter">Καθαρίστε τον εναλλακτή θερμότητας με μία σκούπα</string>
    <string name="tts_fourth_filter">Επανατοποθετήστε το χερούλι και μετά βάλτε το φίλτρο πίσω στο στεγνωτήριο</string>
    <string name="notification_swipe_down_for_more">Σύρε προς τα κάτω για περισσότερα</string>
    <string name="notification_on_pause">Το στεγνωτήριο βρίσκεται σε παύση</string>
    <string name="notification_duration_label">Το πρόγραμμα θα ολοκληρωθεί σε</string>
    <string name="notification_running">Το πρόγραμμα ξεκίνησε!</string>
    <string name="notification_on_resume">Το στεγνωτήριο συνεχίζει την λειτουργία του!</string>
    <string name="notification_on_pause_hint">Πατήστε το κουμπί δεξιά για να συνεχίσει το πρόγραμμα</string>
    <string name="notification_finish">Το πρόγραμμα ολοκληρώθηκε!</string>
    <string name="notification_finish_hint">Βγάλτε τα ρούχα από το στεγνωτήριο</string>
    <string name="notification_delay_hint">Το πρόγραμμα θα ξεκινήσει σε</string>
    <string name="notification_delay">Το πρόγραμμα επιβεβαιώθηκε!</string>
    <string name="notification_on_start">Το πρόγραμμα είναι έτοιμο για εκκίνηση!</string>
    <string name="notification_on_start_hint">Πατήστε το κουμπί στα δεξιά για εκκίνηση</string>
</resources>