<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="activity.SelectionFirstStepActivity">

    <LinearLayout
        android:id="@+id/selectionMainLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/selectionBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/drying_level_label"
            android:textAlignment="center"
            android:textSize="24sp" />

        <Button
            android:id="@+id/dryingLevelUpArrowBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="40dp"
            android:background="@color/gray_200"
            android:stateListAnimator="@null"
            android:text="@string/up_arrow"
            android:textSize="26sp" />

        <LinearLayout
            android:id="@+id/dryingLevelList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:background="@color/gray_200"
            android:orientation="vertical"
            android:padding="10dp">

            <Button
                android:id="@+id/dryingLevelExtraDryBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/gray_300"
                android:padding="10dp"
                android:text="@string/drying_level_extra_dry_btn"
                android:textAllCaps="false"
                android:textSize="16sp"
                app:cornerRadius="20dp" />

            <Button
                android:id="@+id/dryingLevelNormalBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/gray_300"
                android:text="@string/drying_level_normal_btn"
                android:textAllCaps="false"
                android:textSize="16sp"
                app:cornerRadius="20dp" />

            <Button
                android:id="@+id/dryingLevelHandIronBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/gray_300"
                android:text="@string/drying_level_hand_iron_btn"
                android:textAllCaps="false"
                android:textSize="16sp"
                app:cornerRadius="20dp" />

            <Button
                android:id="@+id/dryingLevelMachineIronBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/gray_300"
                android:text="@string/drying_level_machine_iron_btn"
                android:textAllCaps="false"
                android:textSize="16sp"
                app:cornerRadius="20dp" />
        </LinearLayout>

        <Button
            android:id="@+id/dryingLevelDownArrowBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:background="@color/gray_200"
            android:stateListAnimator="@null"
            android:text="@string/down_arrow"
            android:textSize="26sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/dryingLevelControlLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="90dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/selectionMainLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/dryingLevelPreviousBtn"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:backgroundTint="@color/gray_400"
            android:text="@string/previous_btn"
            android:textAllCaps="false"
            android:textSize="16sp" />

        <Button
            android:id="@+id/dryingLevelNextBtn"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/gray_400"
            android:text="@string/next_btn"
            android:textAllCaps="false"
            android:textSize="16sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>